--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -1,4 +1,9 @@
 // hay dos tipos de secciones las que ocupan todo el viewport y las normales
+html {
+	scroll-snap-type: y proximity;
+    scroll-snap-stop: always;
+}
+
 .xlc-section-vp {
     width: 100vw;
     height: 100vh;
@@ -42,25 +47,29 @@
     }
 }
 
-.xlc-colabora-section .xlc-grid {
-    grid-template-rows: auto auto 1fr;
-    grid-template-areas: 
-        "title title title title img1 img1 img1 img1 img2 img2 img2 img2"
-        "description description description description img1 img1 img1 img1 img2 img2 img2 img2"
-        "btn btn btn . img1 img1 img1 img1 img2 img2 img2 img2";
+.xlc-colabora-section {
+    background-color: var(--xlc-beige);
+    
+    .xlc-grid {
+        grid-template-rows: auto auto 1fr;
+        grid-template-areas: 
+            "title title title title img1 img1 img1 img1 img2 img2 img2 img2"
+            "description description description description img1 img1 img1 img1 img2 img2 img2 img2"
+            "btn btn btn . img1 img1 img1 img1 img2 img2 img2 img2";
 
-    .xlc-title { 
-        grid-area: title;
-        font-size: var(--xlc-xl-font-size);
-        line-height: 133px;
+        .xlc-title { 
+            grid-area: title;
+            font-size: var(--xlc-xl-font-size);
+            line-height: 133px;
+        }
+        .xlc-subtitle {
+            grid-area: description;
+            margin-bottom: 2.375rem;
+        }
+        .xlc-orange-btn { grid-area: btn; }
+        .xlc-img-card:nth-of-type(1) { grid-area: img1; }
+        .xlc-img-card:nth-of-type(2) { grid-area: img2; }
     }
-    .xlc-subtitle {
-        grid-area: description;
-        margin-bottom: 2.375rem;
-    }
-    .xlc-orange-btn { grid-area: btn; }
-    .xlc-img-card:nth-of-type(1) { grid-area: img1; }
-    .xlc-img-card:nth-of-type(2) { grid-area: img2; }
 }
 
 .xlc-proyectos-section {
@@ -76,6 +85,20 @@
     }
 
     .xlc-projects-list {
+        margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+    }
+}
+
+.xlc-marcas-section {
+    .xlc-grid {
+        margin-bottom: 5.5rem;
+        grid-template-areas: 
+            "title title title title title title";
+
+        .xlc-title { grid-area: title; }
+    }
+
+    .xlc-marcas-list {
         margin: 0 calc(0px - var(--xlc-grid-lateral-space));
     }
 }
