--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -8,7 +8,7 @@ $xlc-grid-lateral-space: 8.875rem; // 142px
 $xlc-grid-gap: 2rem; // 32px
 
 // Header
-$xlc-header-height: 13.25rem; // 212px
+$xlc-header-height: 6.25rem; // 212px -> 13.25rem; 100px -> 6.25rem
 
 // Projects
 $xlc-project-padding: 3.4rem; // 60px
