pequeño problema con el padding bot solucionado

--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,8 @@ input, button, textarea, select {
 .xlc-footer .xlc-footer-info {
   grid-template-rows: auto auto;
   grid-template-areas: "links links legal legal legal . newsletter newsletter newsletter newsletter newsletter newsletter" "logo logo ubi ubi ubi ubi rrss rrss copy copy copy copy";
-  row-gap: 8.75rem;
+  row-gap: 8rem;
+  padding-bottom: 5rem;
   font-size: var(--xlc-s-font-size);
 }
 .xlc-footer .xlc-footer-info .xlc-links {
