--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   --xlc-grid-gap: 2rem;
   --xlc-grid-lateral-space: 8.875rem;
   --xlc-section-top-padding: 4.375rem;
-  --xlc-header-height: 6.25rem;
+  --xlc-header-height: 8rem;
   --xlc-project-padding: 3.4rem;
   --xlc-transition-projects-interval: 0.2s ease-in;
 }
@@ -151,14 +151,13 @@ input, button, textarea, select {
 .xlc-enum-card .xlc-description-card {
   margin-bottom: 3.75rem;
   font-size: var(--xlc-xs-font-size);
-  font-weight: lighter;
   line-height: var(--xlc-paragraph-line-height);
 }
 
-.xlc-img-card .xlc-img {
+.xlc-img-card .xlc-img, .xlc-img-card .xlc-member-img {
   position: relative;
 }
-.xlc-img-card .xlc-img::before {
+.xlc-img-card .xlc-img::before, .xlc-img-card .xlc-member-img::before {
   content: "";
   display: block;
   width: 100%;
@@ -167,12 +166,31 @@ input, button, textarea, select {
   z-index: 1;
   background-color: var(--xlc-beige);
   mix-blend-mode: color;
+  transition: all 0.2s ease-in-out;
 }
-.xlc-img-card .xlc-img img {
+.xlc-img-card .xlc-img img, .xlc-img-card .xlc-member-img img {
   opacity: 0.33;
+  transition: all 0.2s ease-in-out;
 }
 .xlc-img-card .xlc-caption {
   font-size: var(--xlc-xs-font-size);
+}
+.xlc-img-card .xlc-member-img:hover::before {
+  background-color: transparent;
+}
+.xlc-img-card .xlc-member-img:hover img {
+  opacity: 1;
+}
+.xlc-img-card .xlc-member-name, .xlc-img-card .xlc-member-occupation, .xlc-img-card .xlc-member-description {
+  font-size: var(--xlc-xs-font-size);
+  line-height: var(--xlc-paragraph-line-height);
+}
+.xlc-img-card .xlc-member-name {
+  padding-top: 1rem;
+  font-weight: bold;
+}
+.xlc-img-card .xlc-member-description {
+  width: calc(2/3 * 100%);
 }
 
 .xlc-projects-list {
@@ -489,6 +507,115 @@ input, button, textarea, select {
 
 /* #endregion Index */
 /* #region Nosotros */
+.xlc-nosotros-init-section {
+  padding-top: var(--xlc-header-height);
+  display: flex;
+  align-items: center;
+}
+.xlc-nosotros-init-section .xlc-grid {
+  grid-template-rows: auto auto;
+  grid-template-areas: "title title title title title ." "subtitle subtitle subtitle subtitle subtitle subtitle";
+}
+.xlc-nosotros-init-section .xlc-grid .xlc-title {
+  grid-area: title;
+  color: var(--xlc-white);
+}
+.xlc-nosotros-init-section .xlc-grid .xlc-subtitle {
+  grid-area: subtitle;
+  color: var(--xlc-white);
+}
+.xlc-nosotros-init-section::after {
+  background-image: url("../../img/nosotros/nosotros-init.png");
+}
+
+.xlc-nosotros-info-section .xlc-grid {
+  grid-template-rows: auto auto;
+  grid-template-areas: "title title title title title title . . . . . ." "description description description description description . valores valores valores ods ods ods";
+  row-gap: 13rem;
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-title {
+  grid-area: title;
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-description {
+  grid-area: description;
+  font-size: var(--xlc-xs-font-size);
+  line-height: var(--xlc-paragraph-line-height);
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-valores {
+  grid-area: valores;
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-valores .xlc-valores-title {
+  font-size: var(--xlc-m-font-size);
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-valores .xlc-valores-list li {
+  padding: 1rem 0;
+  border-top: 1px solid var(--xlc-gray);
+  font-weight: bold;
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-ods {
+  grid-area: ods;
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-title {
+  font-size: var(--xlc-m-font-size);
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-list li {
+  display: flex;
+  align-items: center;
+  padding: 1rem 0;
+  font-size: var(--xlc-s-font-size);
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-list li span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.85rem;
+  height: 1.85rem;
+  margin-right: 0.8rem;
+  color: var(--xlc-beige);
+  font-weight: bold;
+  font-size: var(--xlc-xs-font-size);
+  background-color: var(--xlc-black);
+  border-radius: 50%;
+}
+.xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-info {
+  font-weight: lighter;
+  font-style: italic;
+}
+.xlc-nosotros-info-section::after {
+  background-image: url("../../img/nosotros/nosotros-background1.png");
+}
+
+.xlc-nosotros-integrantes-section {
+  background-color: var(--xlc-beige);
+  padding-bottom: var(--xlc-section-top-padding);
+}
+.xlc-nosotros-integrantes-section .xlc-grid {
+  grid-template-rows: auto auto auto;
+  grid-template-areas: "integ1 integ1 integ1 integ1 integ2 integ2 integ2 integ2 integ3 integ3 integ3 integ3" "integ4 integ4 integ4 integ4 integ4 integ4 integ5 integ5 integ5 integ5 integ5 integ5" "integ6 integ6 integ6 integ6 integ6 integ6 integ7 integ7 integ7 integ7 integ7 integ7";
+  row-gap: var(--xlc-section-top-padding);
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(1) {
+  grid-area: integ1;
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(2) {
+  grid-area: integ2;
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(3) {
+  grid-area: integ3;
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(4) {
+  grid-area: integ4;
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(5) {
+  grid-area: integ5;
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(6) {
+  grid-area: integ6;
+}
+.xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(7) {
+  grid-area: integ7;
+}
+
 /* #endregion Nostros */
 .xlc-header {
   position: fixed;
@@ -589,9 +716,13 @@ input, button, textarea, select {
 }
 .xlc-footer .xlc-footer-dona::after {
   background-image: linear-gradient(to bottom, rgba(162, 152, 129, 0.61) 0%, rgba(163, 153, 130, 0.604) 8.6%, rgba(166, 156, 133, 0.586) 17.5%, rgba(170, 160, 138, 0.559) 26.5%, rgba(175, 166, 144, 0.524) 35.6%, rgba(181, 172, 151, 0.483) 44.6%, rgba(188, 179, 158, 0.438) 53.3%, rgba(194, 186, 165, 0.389) 61.7%, rgba(201, 192, 172, 0.341) 69.6%, rgba(207, 199, 178, 0.292) 76.9%, rgba(213, 205, 184, 0.247) 83.4%, rgba(218, 210, 189, 0.206) 89%, rgba(222, 214, 194, 0.171) 93.6%, rgba(225, 217, 197, 0.144) 97.1%, rgba(227, 219, 199, 0.126) 99.2%, rgba(228, 220, 200, 0.12) 100%), url("../../img/footer/footer-dona.png");
+  background-blend-mode: multiply;
+  background-color: var(--xlc-beige);
 }
 .xlc-footer .xlc-footer-colabora::after {
   background-image: linear-gradient(to bottom, rgba(162, 152, 129, 0.61) 0%, rgba(163, 153, 130, 0.604) 8.6%, rgba(166, 156, 133, 0.586) 17.5%, rgba(170, 160, 138, 0.559) 26.5%, rgba(175, 166, 144, 0.524) 35.6%, rgba(181, 172, 151, 0.483) 44.6%, rgba(188, 179, 158, 0.438) 53.3%, rgba(194, 186, 165, 0.389) 61.7%, rgba(201, 192, 172, 0.341) 69.6%, rgba(207, 199, 178, 0.292) 76.9%, rgba(213, 205, 184, 0.247) 83.4%, rgba(218, 210, 189, 0.206) 89%, rgba(222, 214, 194, 0.171) 93.6%, rgba(225, 217, 197, 0.144) 97.1%, rgba(227, 219, 199, 0.126) 99.2%, rgba(228, 220, 200, 0.12) 100%), url("../../img/footer/footer-colabora.png");
+  background-blend-mode: multiply;
+  background-color: var(--xlc-beige);
 }
 .xlc-footer .xlc-footer-info {
   grid-template-rows: auto auto;
