--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -66,6 +66,8 @@
               hsla(42.84, 33.58%, 83.63%, 0.126) 99.2%,
               hsla(42.86, 34.15%, 83.92%, 0.12) 100%
         ), url('../../img/footer/footer-dona.png');
+        background-blend-mode: multiply;
+        background-color: var(--xlc-beige);
     }
     .xlc-footer-colabora::after {
         background-image: linear-gradient(
@@ -87,6 +89,8 @@
               hsla(42.84, 33.58%, 83.63%, 0.126) 99.2%,
               hsla(42.86, 34.15%, 83.92%, 0.12) 100%
         ), url('../../img/footer/footer-colabora.png');
+        background-blend-mode: multiply;
+        background-color: var(--xlc-beige);
     }
 
     .xlc-footer-info {
