--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -6,6 +6,7 @@
     max-width:100%;
 }
 
+// para usar estas clases hay que poner en el contenedor (xlc-container) un after y poner de background la imagen para aplicar el efecto
 .xlc-multiply-background, .xlc-color-background {
     position: relative;
 
@@ -28,7 +29,9 @@
     background-color: var(--xlc-beige);
 
     &::after { mix-blend-mode: luminosity; opacity: .32; }
-} 
+}
+
+// SECCIONES PARA CADA PÁGINAS
 
 /* #region Index */
 .xlc-init-section {
@@ -136,7 +139,104 @@
 /* #endregion Index */
 
 /* #region Nosotros */
+.xlc-nosotros-init-section {
+    padding-top: var(--xlc-header-height);
+    display: flex;
+    align-items: center;
 
+    .xlc-grid {
+        grid-template-rows: auto auto;
+        grid-template-areas: 
+            "title title title title title ."
+            "subtitle subtitle subtitle subtitle subtitle subtitle";
 
+        .xlc-title { grid-area: title; color: var(--xlc-white); }
+        .xlc-subtitle { grid-area: subtitle; color: var(--xlc-white); }
+    }  
+
+    &::after { background-image: url('../../img/nosotros/nosotros-init.png'); }
+}
+
+.xlc-nosotros-info-section {
+    .xlc-grid {
+        grid-template-rows: auto auto;
+        grid-template-areas: 
+            "title title title title title title . . . . . ."
+            "description description description description description . valores valores valores ods ods ods";
+        row-gap: 13rem;
+        
+        .xlc-title { grid-area: title; }
+        .xlc-description {
+            grid-area: description;
+            font-size: var(--xlc-xs-font-size);
+            line-height: var(--xlc-paragraph-line-height);
+        }
+        .xlc-valores {
+            grid-area: valores;
+
+            .xlc-valores-title { font-size: var(--xlc-m-font-size); }
+            .xlc-valores-list li {
+                padding: 1rem 0;
+                border-top: 1px solid var(--xlc-gray);
+                font-weight: bold;
+            }
+        }
+        .xlc-ods {
+            grid-area: ods;
+
+            .xlc-ods-title { font-size: var(--xlc-m-font-size); }
+            .xlc-ods-list li {
+                display: flex;
+                align-items: center;
+                padding: 1rem 0;
+                font-size: var(--xlc-s-font-size);
+
+                span {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 1.85rem;
+                    height: 1.85rem;
+                    margin-right: .8rem;
+
+                    color: var(--xlc-beige);
+                    font-weight: bold;
+                    font-size: var(--xlc-xs-font-size);
+
+                    background-color: var(--xlc-black);
+                    border-radius: 50%; 
+                }
+            }
+            .xlc-ods-info {
+                font-weight: lighter;
+                font-style: italic;
+            }
+        }
+    }
+
+    &::after { background-image: url('../../img/nosotros/nosotros-background1.png'); }
+}
+
+.xlc-nosotros-integrantes-section {
+    background-color: var(--xlc-beige);
+    padding-bottom: var(--xlc-section-top-padding);
+
+    .xlc-grid {
+        grid-template-rows: auto auto auto;
+        grid-template-areas: 
+            "integ1 integ1 integ1 integ1 integ2 integ2 integ2 integ2 integ3 integ3 integ3 integ3"
+            "integ4 integ4 integ4 integ4 integ4 integ4 integ5 integ5 integ5 integ5 integ5 integ5"
+            "integ6 integ6 integ6 integ6 integ6 integ6 integ7 integ7 integ7 integ7 integ7 integ7";
+        row-gap: var(--xlc-section-top-padding);
+
+        .xlc-img-card:nth-of-type(1) { grid-area: integ1; }
+        .xlc-img-card:nth-of-type(2) { grid-area: integ2; }
+        .xlc-img-card:nth-of-type(3) { grid-area: integ3; }
+        .xlc-img-card:nth-of-type(4) { grid-area: integ4; }
+        .xlc-img-card:nth-of-type(5) { grid-area: integ5; }
+        .xlc-img-card:nth-of-type(6) { grid-area: integ6; }
+        .xlc-img-card:nth-of-type(7) { grid-area: integ7; }
+    }
+}
 
 /* #endregion Nostros */
