--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -65,7 +65,7 @@
               hsla(42.81, 32.07%, 82.82%, 0.144) 97.1%,
               hsla(42.84, 33.58%, 83.63%, 0.126) 99.2%,
               hsla(42.86, 34.15%, 83.92%, 0.12) 100%
-        ), url('/assets/img/footer/footer-dona.png');
+        ), url('../img/footer/footer-dona.png');
         background-blend-mode: multiply;
         background-color: var(--xlc-beige);
     }
@@ -88,7 +88,7 @@
               hsla(42.81, 32.07%, 82.82%, 0.144) 97.1%,
               hsla(42.84, 33.58%, 83.63%, 0.126) 99.2%,
               hsla(42.86, 34.15%, 83.92%, 0.12) 100%
-        ), url('/assets/img/footer/footer-colabora.png');
+        ), url('../img/footer/footer-colabora.png');
         background-blend-mode: multiply;
         background-color: var(--xlc-beige);
     }
