--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
-/* */
+/*
+    Theme Name: Tema de Xaloc
+    Author: LaBase
+    Author URI: https://estudiolabase.com/
+    Description: Tema personalizado para Xaloc
+    Version: 1.0
+    Text Domain: xaloc
+*/
