--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,6 +474,16 @@ input, button, textarea, select {
   grid-area: img2;
 }
 
+.xlc-index-presentacion-section > * {
+  width: 100% !important;
+  height: 100% !important;
+}
+.xlc-index-presentacion-section .xlc-video-container {
+  width: 100% !important;
+  height: 100% !important;
+  background-color: var(--xlc-black);
+}
+
 .xlc-index-proyectos-section {
   background-color: var(--xlc-beige);
 }
@@ -705,11 +715,31 @@ input, button, textarea, select {
   display: flex;
 }
 .xlc-header .xlc-grid .xlc-header-menu1 li, .xlc-header .xlc-grid .xlc-header-menu2 li {
+  position: relative;
   margin-right: 1rem;
   font-size: var(--xlc-s-font-size);
 }
 .xlc-header .xlc-grid .xlc-header-menu1 li:last-of-type, .xlc-header .xlc-grid .xlc-header-menu2 li:last-of-type {
   margin: 0;
+}
+.xlc-header .xlc-grid .xlc-header-menu1 li::after, .xlc-header .xlc-grid .xlc-header-menu2 li::after {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.1s ease-out;
+}
+.xlc-header .xlc-grid .xlc-header-menu1 li:hover::after, .xlc-header .xlc-grid .xlc-header-menu2 li:hover::after {
+  transform: scaleX(1);
+}
+.xlc-header .xlc-grid .xlc-header-menu1 .current_page_item::after, .xlc-header .xlc-grid .xlc-header-menu2 .current_page_item::after {
+  transform: scaleX(1) !important;
 }
 .xlc-header .xlc-grid .xlc-header-menu1 {
   grid-area: menu1;
@@ -717,11 +747,17 @@ input, button, textarea, select {
 .xlc-header .xlc-grid .xlc-header-menu1 li a {
   color: var(--xlc-white);
 }
+.xlc-header .xlc-grid .xlc-header-menu1 li::after {
+  background-color: var(--xlc-white);
+}
 .xlc-header .xlc-grid .xlc-header-menu2 {
   grid-area: menu2;
 }
 .xlc-header .xlc-grid .xlc-header-menu2 li a {
   color: var(--xlc-orange);
+}
+.xlc-header .xlc-grid .xlc-header-menu2 li::after {
+  background-color: var(--xlc-orange);
 }
 .xlc-header .xlc-grid .xlc-header-shop {
   grid-area: shop;
